# Transformer

./: .gitignore  README.md  __init__.py  requirements.txt  setup.py
bthesis-transformer/: pyproject.toml  requirements.txt
bthesis-transformer/bthesis-transformer/: base.py  classifier.py  classify.py  generate.py  imdb.py  imdb_sentiment.py  models.py  modules.py  multihead.py  simple.py  tblock.py  transformers.py  utils.py
bthesis-transformer/bthesis-transformer/experiments/: base_i-e3-a3-256.txt  base_t-e3-a3-256.txt  base_t-e3-a3-256_v2.txt  base_t-e3-a3-256_v3.txt  base_t-e3-a3-256_v4.txt  base_t-e3-a3-512.txt  base_t-e3-a3-512_v2.txt  multi_t-e3-a3-256.txt  multi_t-e5-aa-128-b15.txt  multi_t-e5-aa-128-b15_pos.txt  multi_t-e5-aa-256-b16_pos.txt  multi_t-e5-aa-512-b15.txt  simple_i-e3-a3-512.txt  simple_t-e3-a3-256.txt  simple_t-e3-a3-512.txt  simple_t-e5-aa-128-b15.txt  simple_t-e5-aa-256-b15.txt
bthesis-transformer/bthesis_transformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bttransformer/: data_rnn.py  modules.py  transformers.py  utils.py
classification-data_loading/: data_rnn.py  imdb_sentiment.py
data/: tifu_tokenizer.json  xsum_tokenizer.json
experiments/: classify.py  generate.py  summarise.py  summarize.py
mlvu_worksheets/: Worksheet 1, Numpy and Matplotlib.ipynb  Worksheet 5, Pytorch.ipynb
nano-gpt/: gpt-dev.ipynb  shakespear.ipynb
transformers-from-scratch-blog/: tfs.py
